crates/aerro/tests/ui/fail/missing_code.rs
use aerro;

#[aerro::operation]
pub enum E {
    #[aerro(category = "business")]
    NoCode,
}

fn main() {}
