crates/aerro/tests/ui/fail/missing_code.stderr
error: missing `code = "..."`
 --> tests/ui/fail/missing_code.rs:5:5
  |
5 | /     #[aerro(category = "business")]
6 | |     NoCode,
  | |__________^
